--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </thead>
     <tr>
       <td>2002-Present</td>
-      <td>Assistant for the devil</td>
+      <td>Founded Google and I basically run the place</td>
     </tr>
     <tr>
       <td>2005</td>
